--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pl">
   <head>
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,157 +20,173 @@
 
   <body>
     <!--Nagłówek witryny-->
-    <header>
-      <a class="web-studio-link"><span class="web">Web</span>Studio </a>
-      <!--Menu Nav-->
-      <nav>
-        <ul>
+    <header class="container">
+      <div class="site-nav">
+        <a class="web-studio-link"><span class="web">Web</span>Studio </a>
+        <!--Menu Nav-->
+        <nav>
+          <ul class="site-link">
+            <li class="contact-links">
+              <a class="nav-link" href="./index.html">Agencja</a>
+            </li>
+            <li class="contact-links">
+              <a class="nav-link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="contact-links">
+              <a class="nav-link" href="#">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+        <!--Kontakt-->
+        <ul class="site-link">
           <li class="contact-links">
-            <a class="nav-link" href="./index.html">Agencja</a>
+            <a class="con-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-links">
-            <a class="nav-link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="contact-links">
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="con-link" href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
-      </nav>
-      <!--Kontakt-->
-      <ul>
-        <li class="contact-links">
-          <a class="nav-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li class="contact-links">
-          <a class="nav-link" href="tel:+48111111111">+48 111 111 111</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <!--Element z tekstem-->
       <section class="big-header">
-        <h1 class="big-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button class="button-menu" type="button">Zamów usługe</button>
+        <div class="container">
+          <h1 class="big-title">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+          <button class="button-menu" type="button">Zamów usługe</button>
+        </div>
       </section>
     </main>
     <!--Nasze atuty-->
     <section class="sec-paragraph">
-      <ul class="our-section-list list">
-        <li class="our-section-list">
-          <h3 class="our-section-title">LOREM IPSUM</h3>
-          <p class="our-section-description">
-            Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="our-section-list">
-          <h3 class="our-section-title">LOREM IPSUM</h3>
-          <p class="our-section-description">
-            Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="our-section-list">
-          <h3 class="our-section-title">LOREM IPSUM</h3>
-          <p class="our-section-description">
-            Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-        <li class="our-section-list">
-          <h3 class="our-section-title">LOREM IPSUM</h3>
-          <p class="our-section-description">
-            Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
-            arcu sem. Sed non sodales dui. Interdum et malesuada
-          </p>
-        </li>
-      </ul>
-    </section>
-    <!--Czym się zajmujemy-->
-    <section class="second-header">
-      <h2 class="our-section-title-2">Czym się zajmujemy</h2>
-      <ul class="main-images">
-        <li class="main-images-images">
-          <img src="images/img-1.jpg" alt="komputer" width="370" height="294" />
-        </li>
-      </ul>
-      <ul>
-        <li class="main-images-images">
-          <img src="images/img-2.jpg" alt="telefon" width="370" height="294" />
-        </li>
-      </ul>
-      <ul>
-        <li class="main-images-images">
-          <img src="images/img-3.jpg" alt="tablet" width="370" height="294" />
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="our-section-list-list">
+          <li class="our-section-list">
+            <h3 class="our-section-title">LOREM IPSUM</h3>
+            <p class="our-section-description">
+              Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="our-section-list">
+            <h3 class="our-section-title">LOREM IPSUM</h3>
+            <p class="our-section-description">
+              Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="our-section-list">
+            <h3 class="our-section-title">LOREM IPSUM</h3>
+            <p class="our-section-description">
+              Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li class="our-section-list">
+            <h3 class="our-section-title">LOREM IPSUM</h3>
+            <p class="our-section-description">
+              Lorem ipsun dolor sit amet, consectuter adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </div>
+      <!--Czym się zajmujemy-->
+      <div class="container">
+        <h2 class="our-section-title-2">Czym się zajmujemy</h2>
+        <ul class="main-images">
+          <li class="main-img">
+            <img
+              src="images/img-1.jpg"
+              alt="komputer"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img-2.jpg"
+              alt="telefon"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img src="images/img-3.jpg" alt="tablet" width="370" height="294" />
+          </li>
+        </ul>
+      </div>
     </section>
     <!--Nasz zespół-->
     <section class="third-header">
-      <h2 class="our-section-title-2">Nasz zespół</h2>
-      <ul class="team-images">
-        <li class="team-name-item">
-          <img
-            src="images/img-team-1.jpg"
-            alt="John Doe - Product Designer"
-            width="370"
-            height="340"
-          />
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-position">Product Designer</p>
-        </li>
-        <li class="team-name-item">
-          <img
-            src="images/img-team-2.jpg"
-            alt="John Doe - Frontend Developer"
-            width="370"
-            height="340"
-          />
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-position">Frontend Developer</p>
-        </li>
-        <li class="team-name-item">
-          <img
-            src="images/img-team-3.jpg"
-            alt="John Doe - Marketing"
-            width="370"
-            height="340"
-          />
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-position">Marketing</p>
-        </li>
-        <li class="team-name-item">
-          <img
-            src="images/img-team-4.jpg"
-            alt="John Doe - UI Designer"
-            width="370"
-            height="340"
-          />
-          <h3 class="team-name">John Doe</h3>
-          <p class="team-position">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="our-section-title-2">Nasz zespół</h2>
+        <ul class="team-images">
+          <li class="team-name-item">
+            <img
+              src="images/img-team-1.jpg"
+              alt="John Doe - Product Designer"
+              width="370"
+              height="340"
+            />
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-position">Product Designer</p>
+          </li>
+          <li class="team-name-item">
+            <img
+              src="images/img-team-2.jpg"
+              alt="John Doe - Frontend Developer"
+              width="370"
+              height="340"
+            />
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+          <li class="team-name-item">
+            <img
+              src="images/img-team-3.jpg"
+              alt="John Doe - Marketing"
+              width="370"
+              height="340"
+            />
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+          <li class="team-name-item">
+            <img
+              src="images/img-team-4.jpg"
+              alt="John Doe - UI Designer"
+              width="370"
+              height="340"
+            />
+            <h3 class="team-name">John Doe</h3>
+            <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- Stopka strony -->
     <footer class="bottom">
-      <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
-      <address class="bottom-contact-adress">
-        m.Warszawa, Aleje Jerozolimskie 21
-      </address>
-      <ul class="bottom-contact-adress">
-        <li>
-          <a class="bottom-contact-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="bottom-contact-link" href="tel:+48111111111"
-            >+48 111 111 111</a
-          >
-        </li>
-      </ul>
+      <div class="container">
+        <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
+        <address class="bottom-contact-adress">
+          m.Warszawa, Aleje Jerozolimskie 21
+        </address>
+        <ul class="bottom-contact-adress">
+          <li>
+            <a class="bottom-contact-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="bottom-contact-link" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
