--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@
     <header class="container">
       <div class="site-nav">
         <a class="web-studio-link"><span class="web">Web</span>Studio </a>
-        <!--Menu Nav-->
+      </div>
+      <!--Menu Nav-->
+      <div class="main-button">
         <nav>
           <ul class="site-link">
             <li class="contact-links">
