--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <header class="container">
       <div class="site-nav">
         <a class="web-studio-link"><span class="web">Web</span>Studio </a>
-        <!--Menu Nav-->
+      </div>
+      <!--Menu Nav-->
+      <div class="main-button">
         <nav>
           <ul class="site-link">
             <li class="contact-links">
@@ -40,12 +42,12 @@
         <!--Kontakt-->
         <ul class="site-link">
           <li class="contact-links">
-            <a class="con-link" href="mailto:info@devstudio.com"
+            <a class="nav-link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="contact-links">
-            <a class="con-link" href="tel:+48111111111">+48 111 111 111</a>
+            <a class="nav-link" href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
       </div>
