--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,10 @@
   </head>
   <body>
     <!--Nagłówek witryny-->
-    <header class="container">
-      <div class="site-nav">
-        <a class="web-studio-link"><span class="web">Web</span>Studio </a>
-      </div>
-      <!--Menu Nav-->
+    <header class="container page-header">
       <div class="main-button">
+        <a class="web-studio-link"><span class="web">Web</span>Studio </a>
+        <!--Menu Nav-->
         <nav>
           <ul class="site-link">
             <li class="contact-links">
@@ -38,18 +36,18 @@
             </li>
           </ul>
         </nav>
-        <!--Kontakt-->
-        <ul class="site-link">
-          <li class="contact-links">
-            <a class="nav-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-links">
-            <a class="nav-link" href="tel:+48111111111">+48 111 111 111</a>
-          </li>
-        </ul>
       </div>
+      <!--Kontakt-->
+      <ul class="contact-button">
+        <li>
+          <a class="mail" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="tel" href="tel:+48111111111">+48 111 111 111</a>
+        </li>
+      </ul>
     </header>
     <!--Przyciski-->
     <main>
@@ -173,8 +171,8 @@
       </section>
     </main>
     <!-- Stopka strony -->
-    <footer class="bottom">
-      <div class="container">
+    <footer class="containter">
+      <div class="bottom">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
         <address class="bottom-contact-adress">
           m.Warszawa, Aleje Jerozolimskie 21
