--- a/portfolio.html
+++ b/portfolio.html
@@ -75,8 +75,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Technocrack</h3>
-              <p class="client-service">Strona internetowa</p>
+              <div class="border-photo">
+                <h3 class="client-name">Technocrack</h3>
+                <p class="client-service">Strona internetowa</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -86,8 +88,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Grafika New Orlean vs Golden Star</h3>
-              <p class="client-service">Dizajn</p>
+              <div class="border-photo">
+                <h3 class="client-name">Grafika New Orlean vs Golden Star</h3>
+                <p class="client-service">Dizajn</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -97,8 +101,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Restauracja Seafood</h3>
-              <p class="client-service">Aplikacja</p>
+              <div class="border-photo">
+                <h3 class="client-name">Restauracja Seafood</h3>
+                <p class="client-service">Aplikacja</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -108,8 +114,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Projekt Prime</h3>
-              <p class="client-service">Marketing</p>
+              <div class="border-photo">
+                <h3 class="client-name">Projekt Prime</h3>
+                <p class="client-service">Marketing</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -119,8 +127,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Projekt Boxes</h3>
-              <p class="client-service">Aplikacja</p>
+              <div class="border-photo">
+                <h3 class="client-name">Projekt Boxes</h3>
+                <p class="client-service">Aplikacja</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -130,8 +140,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Inspiration has no Borders</h3>
-              <p class="client-service">Strona internetowa</p>
+              <div class="border-photo">
+                <h3 class="client-name">Inspiration has no Borders</h3>
+                <p class="client-service">Strona internetowa</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -141,8 +153,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Magazyn Limited Edition</h3>
-              <p class="client-service">Dizajn</p>
+              <div class="border-photo">
+                <h3 class="client-name">Magazyn Limited Edition</h3>
+                <p class="client-service">Dizajn</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -152,8 +166,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Projekt Lab</h3>
-              <p class="client-service">Marketing</p>
+              <div class="border-photo">
+                <h3 class="client-name">Projekt Lab</h3>
+                <p class="client-service">Marketing</p>
+              </div>
             </li>
             <li class="card-set-item">
               <img
@@ -163,8 +179,10 @@
                 width="370"
                 height="294"
               />
-              <h3 class="client-name">Growing Business</h3>
-              <p class="client-service">Aplikacja</p>
+              <div class="border-photo">
+                <h3 class="client-name">Growing Business</h3>
+                <p class="client-service">Aplikacja</p>
+              </div>
             </li>
           </ul>
         </div>
