--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     </header>
     <!--Przyciski-->
     <main>
-      <section>
+      <section class="top-button">
         <div class="container">
           <ul class="set-buttons">
             <li><button type="button" class="buttons">Wszystkie</button></li>
