--- a/portfolio.html
+++ b/portfolio.html
@@ -189,8 +189,8 @@
       </section>
     </main>
     <!-- Stopka strony -->
-    <footer class="containter">
-      <div class="bottom">
+    <footer class="bottom">
+      <div class="container">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
         <address class="bottom-contact-adress">
           m.Warszawa, Aleje Jerozolimskie 21
