--- a/index.html
+++ b/index.html
@@ -168,9 +168,11 @@
       </div>
     </section>
     <!-- Stopka strony -->
-    <footer class="cointainer">
-      <div class="bottom">
+    <footer class="bottom">
+      <div class="container">
         <a class="studio-name-footer"><span class="web">Web</span>Studio</a>
+      </div>
+      <div class="container">
         <address class="bottom-contact-adress">
           m.Warszawa, Aleje Jerozolimskie 21
         </address>
